fakeagent-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fakeagent
  namespace: default
  labels:
    app: fakeagent
spec:
  selector:
    matchLabels:
      app: fakeagent
  template:
    metadata:
      labels:
        app: fakeagent
    spec:
      serviceAccountName: fakeagent
      hostPID: true
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      securityContext:
        runAsUser: 0
      containers:
        - name: dclient
          image: youngnick/delegated-client:latest
          imagePullPolicy: Always
          command: ["/dclient"]
          args: [ "-s", "/run/spire/sockets/admin.sock", "k8s:ns:default", "k8s:label:k8s-app:sclient",  "k8s:label:k8s-app:sclient2"]
          volumeMounts:
            - name: spire-agent-socket
              mountPath: /run/spire/sockets
              # readOnly: true
        - name: sclient
          image: youngnick/delegated-client:latest
          imagePullPolicy: Always
          command: ["/sclient"]
          volumeMounts:
            - name: spire-agent-socket
              mountPath: /run/spire/sockets
              # readOnly: true

        - name: socketchecker
          image: busybox:1.35
          command: ["sleep", "86400"]
          volumeMounts:
            - name: spire-agent-socket
              mountPath: /run/spire/sockets
              # readOnly: true          
      volumes:
        - name: spire-agent-socket
          hostPath:
            path: /run/spire/sockets
            type: Directory
